--- a/src/app/components/awards/awards.component.html
+++ b/src/app/components/awards/awards.component.html
@@ -78,35 +78,60 @@
     </div>
 
 
-    <div class="site-section">
+    <div class="site-section pb-0">
       <div class="container">
 
-        <div class="owl-carousel testimonial-carousel">
+          <div class="row">
 
-          <div class="testimonial-wrap">
-            <div class="testimonial">
-              <img src="/assets/portfolio/img/person_1.jpg" alt="Image" class="img-fluid">
-              <blockquote>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                  explicabo inventore.</p>
-              </blockquote>
-              <p>&mdash; Jean Hicks</p>
-            </div>
+              <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
+                  <span class="la la-cube la-3x mb-4"></span>
+                  <h4 class="h4 mb-2">Web Design</h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+                  <ul class="list-unstyled list-line">
+                      <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
+                      <li>Non pariatur nisi</li>
+                      <li>Magnam soluta quod</li>
+                      <li>Lorem ipsum dolor</li>
+                      <li>Cumque quae aliquam</li>
+                  </ul>
+              </div>
+              <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
+                  <span class="la la-mobile la-3x mb-4"></span>
+                  <h4 class="h4 mb-2">Mobile Applications</h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+                  <ul class="list-unstyled list-line">
+                      <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
+                      <li>Non pariatur nisi</li>
+                      <li>Magnam soluta quod</li>
+                      <li>Lorem ipsum dolor</li>
+                      <li>Cumque quae aliquam</li>
+                  </ul>
+              </div>
+              <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
+                  <span class="la la-image la-3x mb-4"></span>
+                  <h4 class="h4 mb-2">Graphic Design</h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+                  <ul class="list-unstyled list-line">
+                      <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
+                      <li>Non pariatur nisi</li>
+                      <li>Magnam soluta quod</li>
+                      <li>Lorem ipsum dolor</li>
+                      <li>Cumque quae aliquam</li>
+                  </ul>
+              </div>
+              <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
+                  <span class="la la-search la-3x mb-4"></span>
+                  <h4 class="h4 mb-2">SEO</h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+                  <ul class="list-unstyled list-line">
+                      <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
+                      <li>Non pariatur nisi</li>
+                      <li>Magnam soluta quod</li>
+                      <li>Lorem ipsum dolor</li>
+                      <li>Cumque quae aliquam</li>
+                  </ul>
+              </div>
           </div>
-
-          <div class="testimonial-wrap">
-            <div class="testimonial">
-              <img src="/assets/portfolio/img/person_2.jpg" alt="Image" class="img-fluid">
-              <blockquote>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                  explicabo inventore.</p>
-              </blockquote>
-              <p>&mdash; Chris Stanworth</p>
-            </div>
-          </div>
-
-        </div>
-
       </div>
-    </div>
+  </div>
   </main>
