--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,27 +7,26 @@
         <div class="about-text">
           <small class="small-text">Welcome to <span class="mobile-block">my portfolio website!</span></small>
           <h1 class="animated animated-text">
-            <span class="mr-2">Hey folks, I'm</span>
+            <span class="mr-2">Hello, I'm</span>
             <div class="animated-info">
-              <span class="animated-item">Marvel Sann</span>
+              <span class="animated-item">Emilio Luna</span>
               <span class="animated-item">Web Designer</span>
-              <span class="animated-item">UI Specialist</span>
+              <span class="animated-item">SW Developer</span>
             </div>
           </h1>
 
-          <p>Building a successful product is a challenge. I am highly energetic in user experience design, interfaces
-            and web development.</p>
+          <p>I'm a Full Stack Multiplatform Developer based in Aguascalientes, Mexico with experience in delivering end-to-end web and mobile software products.</p>
 
           <div class="custom-btn-group mt-4">
-            <a href="#" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
-            <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Get a free quote</a>
+            <a href="/resume" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
+            <a href="/contact" class="btn custom-btn custom-btn-bg custom-btn-link">Get a quote</a>
           </div>
         </div>
       </div>
 
       <div class="col-lg-5 col-md-12 col-12">
         <div class="about-image svg">
-          <img src="/assets/marvel/images/undraw/undraw_software_engineer_lvl5.svg" class="img-fluid" alt="svg image">
+          <img src="/assets/cat.jpeg" class="img-fluid" alt="svg image">
         </div>
       </div>
 
@@ -49,31 +48,31 @@
         <div class="owl-carousel owl-theme">
           <div class="item">
             <div class="project-info">
-              <img src="images/project/project-image01.png" class="img-fluid" alt="project image">
+              <img src="/assets/marvel/images/project/project-image01.png" class="img-fluid" alt="project image">
             </div>
           </div>
 
           <div class="item">
             <div class="project-info">
-              <img src="images/project/project-image02.png" class="img-fluid" alt="project image">
+              <img src="/assets/marvel/images/project/project-image02.png" class="img-fluid" alt="project image">
             </div>
           </div>
 
           <div class="item">
             <div class="project-info">
-              <img src="images/project/project-image03.png" class="img-fluid" alt="project image">
+              <img src="/assets/marvel/images/project/project-image03.png" class="img-fluid" alt="project image">
             </div>
           </div>
 
           <div class="item">
             <div class="project-info">
-              <img src="images/project/project-image04.png" class="img-fluid" alt="project image">
+              <img src="/assets/marvel/images/project/project-image04.png" class="img-fluid" alt="project image">
             </div>
           </div>
 
           <div class="item">
             <div class="project-info">
-              <img src="images/project/project-image05.png" class="img-fluid" alt="project image">
+              <img src="/assets/marvel/images/project/project-image05.png" class="img-fluid" alt="project image">
             </div>
           </div>
         </div>
