--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -11,7 +11,7 @@
         </div>
 
 
-        <pdf-viewer [src]="src" [rotation]="0" [original-size]="false" [show-all]="true" [fit-to-page]="false"
+        <pdf-viewer [src]="srcEnglish" [rotation]="0" [original-size]="false" [show-all]="true" [fit-to-page]="false"
           [zoom]="1" [zoom-scale]="'page-width'" [stick-to-page]="false" [render-text]="true"
           [external-link-target]="'blank'" [autoresize]="true" [show-borders]="false"
           style="width: 90%; height: 600px;"></pdf-viewer>
