--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,7 +10,6 @@
             <span class="mr-2">Hello, I'm</span>
             <div class="animated-info">
               <span class="animated-item">Emilio Luna</span>
-              <span class="animated-item">Web Designer</span>
               <span class="animated-item">SW Developer</span>
             </div>
           </h1>
@@ -35,52 +34,73 @@
 </section>
 
 <!-- PROJECTS -->
+<!-- PROJECTS -->
 <section class="project py-5" id="project">
   <div class="container">
-
     <div class="row">
       <div class="col-lg-11 text-center mx-auto col-12">
-
         <div class="col-lg-8 mx-auto">
           <h2>Things I have designed for digital media agencies</h2>
         </div>
 
-        <div class="owl-carousel owl-theme">
-          <div class="item">
-            <div class="project-info">
-              <img src="/assets/marvel/images/project/project-image01.png" class="img-fluid" alt="project image">
+        <div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="/assets/marvel/images/project/project-image01.png" class="d-block w-100" alt="project image">
+              <div class="carousel-caption d-none d-md-block" style="filter: invert(100%);">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/assets/marvel/images/project/project-image02.png" class="d-block w-100" alt="project image">
+              <div class="carousel-caption d-none d-md-block" style="filter: invert(100%);">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/assets/marvel/images/project/project-image03.png" class="d-block w-100" alt="project image">
+              <div class="carousel-caption d-none d-md-block" style="filter: invert(100%);">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item" >
+              <img src="/assets/marvel/images/project/project-image04.png" class="d-block w-100" alt="project image">
+              <div class="carousel-caption d-none d-md-block" style="filter: invert(100%);">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/assets/marvel/images/project/project-image05.png" class="d-block w-100" alt="project image">
+              <div class="carousel-caption d-none d-md-block" style="filter: invert(100%);">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
             </div>
           </div>
-
-          <div class="item">
-            <div class="project-info">
-              <img src="/assets/marvel/images/project/project-image02.png" class="img-fluid" alt="project image">
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="project-info">
-              <img src="/assets/marvel/images/project/project-image03.png" class="img-fluid" alt="project image">
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="project-info">
-              <img src="/assets/marvel/images/project/project-image04.png" class="img-fluid" alt="project image">
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="project-info">
-              <img src="/assets/marvel/images/project/project-image05.png" class="img-fluid" alt="project image">
-            </div>
-          </div>
+          
+          <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev" style="filter: invert(100%);">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next" style="filter: invert(100%);">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-
       </div>
     </div>
   </div>
 </section>
+
 
 <!-- FEATURES -->
 <section class="resume py-5 d-lg-flex justify-content-center align-items-center" id="resume">
