--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -5,10 +5,8 @@
             <div class="row mb-4 align-items-center">
                 <div class="col-md-6" data-aos="fade-up">
 
-                    <h2>My Services</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-                        officiis
-                        explicabo inventore.</p>
+                    <h2>Skills</h2>
+                    <p>"Navigating Success: The Human Side of Programming."</p>
 
                 </div>
 
@@ -23,50 +21,88 @@
 
                     <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
                         <span class="la la-cube la-3x mb-4"></span>
-                        <h4 class="h4 mb-2">Web Design</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+                        
+                        <p>Soft Skills</p>
                         <ul class="list-unstyled list-line">
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-                            <li>Non pariatur nisi</li>
-                            <li>Magnam soluta quod</li>
-                            <li>Lorem ipsum dolor</li>
-                            <li>Cumque quae aliquam</li>
+                            <li>Abstract Thinking</li>
+                            <li>Decision Making</li>
+                            <li>Problem Solving</li>
+                            <li>Attention to Detail</li>
+                            <li>Flexibility</li>
+                            <li>Teamwork</li>
+                            <li>Responsibility</li>
                         </ul>
                     </div>
                     <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
                         <span class="la la-mobile la-3x mb-4"></span>
-                        <h4 class="h4 mb-2">Mobile Applications</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+                       
+                        <p>Languages</p>
                         <ul class="list-unstyled list-line">
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-                            <li>Non pariatur nisi</li>
-                            <li>Magnam soluta quod</li>
-                            <li>Lorem ipsum dolor</li>
-                            <li>Cumque quae aliquam</li>
+                            <li>
+                                Spanish: Native
+                            </li>
+                            <li>
+                                English: C1 (Full professional proficiency)
+                            </li>
+                            <li>French: A1 (Basic proficiency)</li>
                         </ul>
                     </div>
                     <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
                         <span class="la la-image la-3x mb-4"></span>
-                        <h4 class="h4 mb-2">Graphic Design</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+                      
+                        <p>Programming Languages</p>
                         <ul class="list-unstyled list-line">
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-                            <li>Non pariatur nisi</li>
-                            <li>Magnam soluta quod</li>
-                            <li>Lorem ipsum dolor</li>
-                            <li>Cumque quae aliquam</li>
+                            <li>Python</li>
+                            <li>JavaScript</li>
+                            <li>SQL</li>
+                            <li>Java</li>
+                            <li>TypeScript</li>
+                            <li>C++</li>
+                            <li>R</li>
                         </ul>
                     </div>
                     <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
                         <span class="la la-search la-3x mb-4"></span>
                         <h4 class="h4 mb-2">SEO</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+                        <p>Libraries, Tools, and Frameworks</p>
                         <ul class="list-unstyled list-line">
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-                            <li>Non pariatur nisi</li>
-                            <li>Magnam soluta quod</li>
-                            <li>Lorem ipsum dolor</li>
-                            <li>Cumque quae aliquam</li>
+                            <li>Git, Github</li>
+                            <li>Node.js</li>
+                            <li>Django</li>
+                            <li>Angular</li>
+                            <li>HTML5, CSS3</li>
+                            <li>Mongoose</li>
+                            <li>SASS</li>
+                            <li>React</li>
+                            <li>Bootstrap</li>
+                            <li>Azure App Services</li>
+                            <li>Photoshop</li>
+                            <li>Figma</li>
+                            <li>Adobe XD</li>
+                            <li>Tableau</li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
+                        <span class="la la-search la-3x mb-4"></span>
+                        
+                        <p>Databases</p>
+                        <ul class="list-unstyled list-line">
+                            <li>MySQL</li>
+                            <li>MongoDB</li>
+                            <li>SQLite</li>
+                            <li>Firebase</li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
+                        <span class="la la-search la-3x mb-4"></span>
+                        
+                        <p>Operating Systems and Environments</p>
+                        <ul class="list-unstyled list-line">
+                            <li>Eclipse</li>
+                            <li>VS Code</li>
+                            <li>IntelliJ IDEA</li>
+                            <li>Windows</li>
+                            <li>Ubuntu</li>
                         </ul>
                     </div>
                 </div>
