--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -40,50 +40,31 @@
     <div class="row">
       <div class="col-lg-11 text-center mx-auto col-12">
         <div class="col-lg-8 mx-auto">
-          <h2>Things I have designed for digital media agencies</h2>
+          <h2>Things I have programmed for projects and hackathons</h2>
         </div>
 
         <div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
+         
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/assets/marvel/images/project/project-image01.png" class="d-block w-100" alt="project image">
-              <div class="carousel-caption d-none d-md-block" style="filter: invert(100%);">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
+              <img src="/assets/uaa/Imagen8.png" class="d-block w-100" alt="project image">
+              
             </div>
             <div class="carousel-item">
-              <img src="/assets/marvel/images/project/project-image02.png" class="d-block w-100" alt="project image">
-              <div class="carousel-caption d-none d-md-block" style="filter: invert(100%);">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
+              <img src="/assets/uaa/Imagen14.png" class="d-block w-100" alt="project image">
+              
             </div>
             <div class="carousel-item">
-              <img src="/assets/marvel/images/project/project-image03.png" class="d-block w-100" alt="project image">
-              <div class="carousel-caption d-none d-md-block" style="filter: invert(100%);">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
+              <img src="/assets/etsy/Imagen7.png" class="d-block w-100" alt="project image">
+              
             </div>
             <div class="carousel-item" >
-              <img src="/assets/marvel/images/project/project-image04.png" class="d-block w-100" alt="project image">
-              <div class="carousel-caption d-none d-md-block" style="filter: invert(100%);">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
+              <img src="/assets/base/Imagen35.png" class="d-block w-100" alt="project image">
+              
             </div>
             <div class="carousel-item">
-              <img src="/assets/marvel/images/project/project-image05.png" class="d-block w-100" alt="project image">
-              <div class="carousel-caption d-none d-md-block" style="filter: invert(100%);">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
+              <img src="/assets/talent2023/Imagen18.png" class="d-block w-100" alt="project image">
+              
             </div>
           </div>
           
@@ -113,44 +94,31 @@
         <div class="timeline">
           <div class="timeline-wrapper">
             <div class="timeline-yr">
-              <span>2019</span>
+              <span>2023</span>
             </div>
             <div class="timeline-info">
-              <h3><span>Project Manager</span><small>Best Studio</small></h3>
-              <p>Proin ornare non purus ut rutrum. Nulla facilisi. Aliquam laoreet libero ac pharetra feugiat. Cras ac
-                fermentum nunc, a faucibus nunc.</p>
+              <h3><span>Mobile Development Intern</span><small>UAA</small></h3>
+              <p>Master's research assistant. Development of a Mobile application focused on the development of skills for the treatment of borderline personality disorder and in patients with suicidal and self-harm tendencies using dialectical-behavioral therapy.</p>
             </div>
           </div>
 
           <div class="timeline-wrapper">
             <div class="timeline-yr">
-              <span>2018</span>
+              <span>2023</span>
             </div>
             <div class="timeline-info">
-              <h3><span>UX Designer</span><small>Digital Ace</small></h3>
-              <p>Fusce rutrum augue id orci rhoncus molestie. Nunc auctor dignissim lacus vel iaculis.</p>
+              <h3><span>IT Support</span><small>Tourism Secretariat of the State of Aguascalientes</small></h3>
+              <p>Tech Staff at SECTUR AGS.</p>
             </div>
           </div>
 
           <div class="timeline-wrapper">
             <div class="timeline-yr">
-              <span>2016</span>
+              <span>2022</span>
             </div>
             <div class="timeline-info">
-              <h3><span>UI Freelancer</span></h3>
-              <p>Sed fringilla vitae enim sit amet cursus. Sed cursus dictum tortor quis pharetra. Pellentesque habitant
-                morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-            </div>
-          </div>
-
-          <div class="timeline-wrapper">
-            <div class="timeline-yr">
-              <span>2014</span>
-            </div>
-            <div class="timeline-info">
-              <h3><span>Junior Designer<small>Crafted Co.</small></span></h3>
-              <p>Cras scelerisque scelerisque condimentum. Nullam at volutpat mi. Nunc auctor ipsum eget magna consequat
-                viverra.</p>
+              <h3><span>Freelance Web Designer<small>Fivverr.</small></span></h3>
+              <p>Creative desing of websites using HTML, CSS.</p>
             </div>
           </div>
 
@@ -163,33 +131,32 @@
         <div class="timeline">
           <div class="timeline-wrapper">
             <div class="timeline-yr">
-              <span>2017</span>
+              <span>2020-2025</span>
             </div>
             <div class="timeline-info">
-              <h3><span>Mobile Web</span><small>Master Design</small></h3>
-              <p>Please tell your friends about Tooplate website. That would be very helpful. We need your support.</p>
+              <h3><span>Computer Science</span><small>Autonomus University of Aguascalientes</small></h3>
+              
             </div>
           </div>
 
           <div class="timeline-wrapper">
             <div class="timeline-yr">
-              <span>2015</span>
+              <span>2023</span>
             </div>
             <div class="timeline-info">
-              <h3><span>User Interfaces</span><small>Creative Agency</small></h3>
-              <p><a rel="nofollow" href="https://www.facebook.com/tooplate">Tooplate</a> is a great website to download
-                HTML templates without any login or email.</p>
+              <h3><span>Oracle One Next Education</span><small>Oracle</small></h3>
+            <p>
+                Java and Spring Programming.</p>
             </div>
           </div>
 
           <div class="timeline-wrapper">
             <div class="timeline-yr">
-              <span>2013</span>
+              <span>2023</span>
             </div>
             <div class="timeline-info">
-              <h3><span>Artwork Design</span><small>New Art School</small></h3>
-              <p>You can freely use Tooplate's templates for your business or personal sites. You cannot redistribute
-                this template without a permission.</p>
+              <h3><span>Full Stack Developer JS</span><small>Bedu.org</small></h3>
+              <p>Javascript, Node.js, Express.js, Sequelize, Mongoose</p>
             </div>
           </div>
 
@@ -211,57 +178,39 @@
 
     <div class="row" data-aos="fade-up" data-aos-delay="200">
       <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-        <a href="work-single.html" class="item-wrap fancybox">
-          <div class="work-info">
-            <h3>Boxed Water</h3>
-            <span>Web</span>
-          </div>
-          <img class="img-fluid" src="/assets/portfolio/img/img_1.jpg">
+        <a href="#" class="item-wrap fancybox">
+          
+          <img class="img-fluid" src="/assets/etsy/Imagen1.png">
         </a>
       </div>
       <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-        <a href="work-single.html" class="item-wrap fancybox">
-          <div class="work-info">
-            <h3>Build Indoo</h3>
-            <span>Photography</span>
-          </div>
-          <img class="img-fluid" src="/assets/portfolio/img/img_2.jpg">
+        <a href="#" class="item-wrap fancybox">
+          
+          <img class="img-fluid" src="/assets/etsy/Imagen2.png">
         </a>
       </div>
       <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-        <a href="work-single.html" class="item-wrap fancybox">
-          <div class="work-info">
-            <h3>Cocooil</h3>
-            <span>Branding</span>
-          </div>
-          <img class="img-fluid" src="/assets/portfolio/img/img_3.jpg">
+        <a href="#" class="item-wrap fancybox">
+         
+          <img class="img-fluid" src="/assets/etsy/Imagen3.png">
         </a>
       </div>
       <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-        <a href="work-single.html" class="item-wrap fancybox">
-          <div class="work-info">
-            <h3>Nike Shoe</h3>
-            <span>Design</span>
-          </div>
-          <img class="img-fluid" src="/assets/portfolio/img/img_4.jpg">
+        <a href="#" class="item-wrap fancybox">
+          
+          <img class="img-fluid" src="/assets/etsy/Imagen4.png">
         </a>
       </div>
       <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-        <a href="work-single.html" class="item-wrap fancybox">
-          <div class="work-info">
-            <h3>Kitchen Sink</h3>
-            <span>Photography</span>
-          </div>
-          <img class="img-fluid" src="/assets/portfolio/img/img_5.jpg">
+        <a href="#" class="item-wrap fancybox">
+          
+          <img class="img-fluid" src="/assets/etsy/Imagen5.png">
         </a>
       </div>
       <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-        <a href="work-single.html" class="item-wrap fancybox">
-          <div class="work-info">
-            <h3>Amazon</h3>
-            <span>brandingn</span>
-          </div>
-          <img class="img-fluid" src="/assets/portfolio/img/img_6.jpg">
+        <a href="#" class="item-wrap fancybox">
+          
+          <img class="img-fluid" src="/assets/etsy/Imagen6.png">
         </a>
       </div>
     </div>
